WebCore/svg/SVGStyledTransformableElement.h
@@ -37,10 +37,14 @@ public:
 
     virtual AffineTransform getCTM(StyleUpdateStrategy = AllowStyleUpdate) const;
     virtual AffineTransform getScreenCTM(StyleUpdateStrategy = AllowStyleUpdate) const;
+    virtual SVGElement* nearestViewportElement() const;
+    virtual SVGElement* farthestViewportElement() const;
 
     virtual AffineTransform localCoordinateSpaceTransform(SVGLocatable::CTMScope mode) const { return SVGTransformable::localCoordinateSpaceTransform(mode); }
     virtual AffineTransform animatedLocalTransform() const;
     virtual AffineTransform* supplementalTransform();
+
+    virtual FloatRect getBBox(StyleUpdateStrategy = AllowStyleUpdate) const;
 
     bool isKnownAttribute(const QualifiedName&);
 
